--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           cd $ROOT_DIR
           mkdir customEngine
           cd customEngine
-          echo 'solutions = [{"managed": False,"name": "engine/src/flutter","url": "'$ROOT_DIR/engine'","custom_deps": {},"deps_file": "DEPS","safesync_url": "",},]' > .gclient
+          echo 'solutions = [{"managed": False,"name": ".","url": "'$ROOT_DIR/engine'","custom_deps": {},"deps_file": "DEPS","safesync_url": "",},]' > .gclient
           gclient sync
           reflutter -b ${{env.SNAPSHOT_HASH}}
       - name: ninja build Flutter.framework
@@ -101,7 +101,7 @@ jobs:
           cd $ROOT_DIR
           mkdir customEngine
           cd customEngine
-          echo 'solutions = [{"managed": False,"name": "engine/src/flutter","url": "'$ROOT_DIR/engine'","custom_deps": {},"deps_file": "DEPS","safesync_url": "",},]' > .gclient
+          echo 'solutions = [{"managed": False,"name": ".","url": "'$ROOT_DIR/engine'","custom_deps": {},"deps_file": "DEPS","safesync_url": "",},]' > .gclient
           gclient sync
           reflutter -b ${{env.SNAPSHOT_HASH}} -p
       - name: ninja build Flutter.framework
