--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Xcode version
         uses: maxim-lobanov/setup-xcode@v1.3.0
         with:
-          xcode-version: 15.0
+          xcode-version: latest-stable
       - name: Set variables
         run: |
           HASH=$(cat SNAPSHOT_HASH)
