--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build reFlutter Android ARM64 Only
+name: Build reFlutter Android ARM64
 
 on:
   workflow_dispatch:
@@ -13,7 +13,7 @@ on:
         type: string
         default: '57d3bac3dd5cb5b0e464ab70e7bc8a0d8cf083ab'
       wait_time:
-        description: 'Wait Time in seconds (for source code modifications)'
+        description: 'Wait Time in seconds'
         required: false
         default: '300'
         type: string
@@ -54,12 +54,7 @@ jobs:
           df -h
           
           FREE_SPACE=$(df -BG / | awk 'NR==2 {print $4}' | sed 's/G//')
-          echo ""
           echo "Free space: ${FREE_SPACE}GB"
-          
-          if [ "$FREE_SPACE" -lt 50 ]; then
-            echo "⚠️  WARNING: Only ${FREE_SPACE}GB free. Build may need 50GB+"
-          fi
       
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -71,140 +66,98 @@ jobs:
         run: |
           git clone https://github.com/Impact-I/reFlutter
           cd reFlutter
-          echo "reFlutter repository contents:"
           ls -lah
       
       - name: Create optimized Dockerfile
         run: |
           cd reFlutter
-          cp Dockerfile Dockerfile.original
-          
           cat > Dockerfile << 'DOCKERFILE_END'
-FROM ubuntu:22.04
-
-ARG HASH_PATCH
-ARG COMMIT
-ARG arm
-ARG arm64
-ARG x64
-
-ENV DEPOT_TOOLS_PATH=/depot_tools
-ENV TEMP_ENGINE=/engine
-ENV ENGINE_PATH=/customEngine
-ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/depot_tools
-ENV WAIT=4
-ENV arm64=${arm64:-arm64-v8a}
-ENV arm=${arm:-armeabi-v7a}
-ENV x64=${x64:-x86_64}
-ENV HASH_PATCH=$HASH_PATCH
-ENV COMMIT=$COMMIT
-ENV GCLIENT_SUPPRESS_GIT_VERSION_WARNING=1
-ENV DEPOT_TOOLS_UPDATE=0
-
-RUN apt-get update && \
-  DEBIAN_FRONTEND="noninteractive" apt-get install -y \
-  git git-svn git-man wget curl software-properties-common unzip \
-  python3-pip python3 lsb-release sudo apt-transport-https tzdata \
-  python3-pkgconfig default-jre default-jdk ninja-build && \
-  mkdir t
-
-ENTRYPOINT ["/bin/sh", "-c", "\
-set -e && \
-echo '=== Installing reFlutter ===' && \
-cd /t && \
-pip3 install wheel && \
-pip3 install . && \
-echo '=== Setting up depot_tools ===' && \
-rm -rf ${DEPOT_TOOLS_PATH} 2> /dev/null && \
-git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git ${DEPOT_TOOLS_PATH} && \
-echo '=== Cloning Flutter engine ===' && \
-rm -rf ${TEMP_ENGINE} 2> /dev/null && \
-git clone https://github.com/flutter/engine.git ${TEMP_ENGINE} && \
-cd ${TEMP_ENGINE} && \
-git config --global user.email 'reflutter@example.com' && \
-git config --global user.name 'reflutter' && \
-echo \"=== Checking out commit ${COMMIT} ===\" && \
-git fetch origin ${COMMIT} && \
-git checkout ${COMMIT} && \
-echo '=== Applying reFlutter patches ===' && \
-reflutter -b ${HASH_PATCH} -p && \
-echo 'reflutter' > REFLUTTER && \
-git add . && \
-git commit -am 'reflutter' || true && \
-echo '=== Setting up engine workspace ===' && \
-rm -rf ${ENGINE_PATH} 2> /dev/null && \
-mkdir -p ${ENGINE_PATH}/src && \
-cd ${ENGINE_PATH} && \
-echo 'solutions = [{\"managed\": False,\"name\": \"src/flutter\",\"url\": \"'${TEMP_ENGINE}'\",\"custom_deps\": {},\"deps_file\": \"DEPS\",\"safesync_url\": \"\",},]' > .gclient && \
-echo '=== Creating stub for pub_get_offline.py ===' && \
-mkdir -p ${ENGINE_PATH}/src/flutter/tools && \
-cat > ${ENGINE_PATH}/src/flutter/tools/pub_get_offline.py << 'PYTHON_END'
-#!/usr/bin/env python3
-import sys
-print('Skipping pub_get_offline.py (stub for older engine versions)')
-sys.exit(0)
-PYTHON_END
-chmod +x ${ENGINE_PATH}/src/flutter/tools/pub_get_offline.py && \
-echo '=== Running gclient sync (this will take a while) ===' && \
-gclient sync -D --no-history 2>&1 | tee /tmp/gclient.log || { \
-  echo 'WARNING: gclient sync encountered errors'; \
-  echo 'Checking for critical files...'; \
-  if [ ! -f src/flutter/tools/gn ]; then \
-    echo 'ERROR: GN tool not found at src/flutter/tools/gn'; \
-    echo 'Last 50 lines of gclient log:'; \
-    tail -50 /tmp/gclient.log; \
-    exit 1; \
-  fi; \
-  echo 'Critical files present, continuing despite warnings...'; \
-} && \
-echo '=== Applying patches to synced source ===' && \
-cd src/flutter && \
-reflutter -b ${HASH_PATCH} -p || echo 'WARNING: Patch reapplication had issues' && \
-cd ${ENGINE_PATH} && \
-echo '=== Verifying build environment ===' && \
-[ -f src/flutter/tools/gn ] || { echo 'ERROR: GN not found'; exit 1; } && \
-command -v ninja > /dev/null || { echo 'ERROR: Ninja not found'; exit 1; } && \
-echo '✓ Build prerequisites verified' && \
-echo \"=== Waiting ${WAIT} seconds for manual modifications ===\" && \
-sleep \${WAIT} && \
-export NINJA_SUMMARIZE_BUILD=1 && \
-if [ \"\${arm64}\" != \"0\" ]; then \
-  echo '=== Building ARM64 (this will take 3-5 hours) ===' && \
-  src/flutter/tools/gn --no-goma --android --android-cpu=arm64 --runtime-mode=release && \
-  ninja -C src/out/android_release_arm64 && \
-  [ -f src/out/android_release_arm64/lib.stripped/libflutter.so ] && \
-  cp src/out/android_release_arm64/lib.stripped/libflutter.so /libflutter_arm64.so && \
-  echo '✓ ARM64 build complete' && \
-  ls -lh /libflutter_arm64.so; \
-fi && \
-if [ \"\${arm}\" != \"0\" ]; then \
-  echo '=== Building ARM ===' && \
-  src/flutter/tools/gn --no-goma --android --android-cpu=arm --runtime-mode=release && \
-  ninja -C src/out/android_release && \
-  [ -f src/out/android_release/lib.stripped/libflutter.so ] && \
-  cp src/out/android_release/lib.stripped/libflutter.so /libflutter_arm.so && \
-  echo '✓ ARM build complete' && \
-  ls -lh /libflutter_arm.so; \
-fi && \
-if [ \"\${x64}\" != \"0\" ]; then \
-  echo '=== Building x64 ===' && \
-  src/flutter/tools/gn --no-goma --android --android-cpu=x64 --runtime-mode=release && \
-  ninja -C src/out/android_release_x64 && \
-  [ -f src/out/android_release_x64/lib.stripped/libflutter.so ] && \
-  cp src/out/android_release_x64/lib.stripped/libflutter.so /libflutter_x64.so && \
-  echo '✓ x64 build complete' && \
-  ls -lh /libflutter_x64.so; \
-fi && \
-cd / && \
-echo '=== Copying artifacts to /t/ ===' && \
-cp -va *.so /t/ 2>/dev/null && \
-echo '=== Build complete ===' && \
-ls -lh /t/*.so"]
-
-CMD ["bash"]
-DOCKERFILE_END
+          FROM ubuntu:22.04
           
-          echo "✓ Dockerfile created"
+          ARG HASH_PATCH
+          ARG COMMIT
+          ARG arm
+          ARG arm64
+          ARG x64
+          
+          ENV DEPOT_TOOLS_PATH=/depot_tools
+          ENV TEMP_ENGINE=/engine
+          ENV ENGINE_PATH=/customEngine
+          ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/depot_tools
+          ENV WAIT=4
+          ENV arm64=${arm64:-arm64-v8a}
+          ENV arm=${arm:-armeabi-v7a}
+          ENV x64=${x64:-x86_64}
+          ENV HASH_PATCH=$HASH_PATCH
+          ENV COMMIT=$COMMIT
+          ENV GCLIENT_SUPPRESS_GIT_VERSION_WARNING=1
+          
+          RUN apt-get update && \
+            DEBIAN_FRONTEND="noninteractive" apt-get install -y \
+            git wget curl unzip python3-pip python3 lsb-release \
+            sudo tzdata python3-pkgconfig default-jre default-jdk ninja-build && \
+            mkdir t
+          
+          ENTRYPOINT ["/bin/sh", "-c", "\
+          set -e && \
+          cd /t && \
+          pip3 install wheel && \
+          pip3 install . && \
+          rm -rf ${DEPOT_TOOLS_PATH} 2>/dev/null && \
+          git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git ${DEPOT_TOOLS_PATH} && \
+          rm -rf ${TEMP_ENGINE} 2>/dev/null && \
+          git clone https://github.com/flutter/engine.git ${TEMP_ENGINE} && \
+          cd ${TEMP_ENGINE} && \
+          git config --global user.email 'reflutter@example.com' && \
+          git config --global user.name 'reflutter' && \
+          git fetch origin ${COMMIT} && \
+          git checkout ${COMMIT} && \
+          reflutter -b ${HASH_PATCH} -p && \
+          echo 'reflutter' > REFLUTTER && \
+          git add . && \
+          git commit -am 'reflutter' || true && \
+          rm -rf ${ENGINE_PATH} 2>/dev/null && \
+          mkdir -p ${ENGINE_PATH}/src && \
+          cd ${ENGINE_PATH} && \
+          echo 'solutions = [{\"managed\": False,\"name\": \"src/flutter\",\"url\": \"'${TEMP_ENGINE}'\",\"custom_deps\": {},\"deps_file\": \"DEPS\",\"safesync_url\": \"\",},]' > .gclient && \
+          mkdir -p src/flutter/tools && \
+          cat > src/flutter/tools/pub_get_offline.py << 'PYTHON_SCRIPT'\n\
+          #!/usr/bin/env python3\n\
+          import sys\n\
+          print('Skipping pub_get_offline.py (stub for compatibility)')\n\
+          sys.exit(0)\n\
+          PYTHON_SCRIPT\n\
+          chmod +x src/flutter/tools/pub_get_offline.py && \
+          gclient sync -D --no-history && \
+          cd src/flutter && \
+          reflutter -b ${HASH_PATCH} -p || true && \
+          cd ${ENGINE_PATH} && \
+          sleep ${WAIT} && \
+          export NINJA_SUMMARIZE_BUILD=1 && \
+          if [ \"${arm64}\" != \"0\" ]; then \
+            src/flutter/tools/gn --no-goma --android --android-cpu=arm64 --runtime-mode=release && \
+            ninja -C src/out/android_release_arm64 && \
+            cp src/out/android_release_arm64/lib.stripped/libflutter.so /libflutter_arm64.so && \
+            ls -lh /libflutter_arm64.so; \
+          fi && \
+          if [ \"${arm}\" != \"0\" ]; then \
+            src/flutter/tools/gn --no-goma --android --android-cpu=arm --runtime-mode=release && \
+            ninja -C src/out/android_release && \
+            cp src/out/android_release/lib.stripped/libflutter.so /libflutter_arm.so && \
+            ls -lh /libflutter_arm.so; \
+          fi && \
+          if [ \"${x64}\" != \"0\" ]; then \
+            src/flutter/tools/gn --no-goma --android --android-cpu=x64 --runtime-mode=release && \
+            ninja -C src/out/android_release_x64 && \
+            cp src/out/android_release_x64/lib.stripped/libflutter.so /libflutter_x64.so && \
+            ls -lh /libflutter_x64.so; \
+          fi && \
+          cd / && \
+          cp -va *.so /t/ 2>/dev/null && \
+          echo '=== Build complete ==='"]
+          
+          CMD ["bash"]
+          DOCKERFILE_END
       
       - name: Build Docker image
         run: |
@@ -218,27 +171,18 @@ DOCKERFILE_END
             -f Dockerfile .
       
       - name: Create output directory
-        run: mkdir -p ${{ github.workspace }}/output
+        run: mkdir -p output
       
       - name: Run reFlutter build
         run: |
           cd reFlutter
           
-          echo "=== Starting ARM64 Build ==="
-          echo "Engine Commit: ${{ inputs.engine_commit }}"
-          echo "Snapshot Hash: ${{ inputs.snapshot_hash }}"
-          echo "Estimated time: 3-5 hours"
-          echo ""
-          
-          # Disk space monitoring
           (while true; do 
-            echo "=== Disk Usage [$(date +%T)] ===" 
             df -h / | tail -n1
             sleep 300
           done) &
           MONITOR_PID=$!
           
-          # Run the build
           docker run \
             -e WAIT=${{ inputs.wait_time }} \
             -e arm64=arm64-v8a \
@@ -250,125 +194,57 @@ DOCKERFILE_END
             -v "$(pwd):/t" \
             reflutter
           
-          BUILD_EXIT_CODE=$?
-          
           kill $MONITOR_PID 2>/dev/null || true
-          
-          if [ $BUILD_EXIT_CODE -ne 0 ]; then
-            echo "❌ Build failed with exit code $BUILD_EXIT_CODE"
-            exit $BUILD_EXIT_CODE
-          fi
-      
-      - name: Verify build output
-        run: |
-          echo "=== Checking for build artifacts ==="
-          cd reFlutter
-          
-          if [ -f libflutter_arm64.so ]; then
-            echo "✓ Found libflutter_arm64.so"
-            ls -lh libflutter_arm64.so
-            file libflutter_arm64.so
-          else
-            echo "❌ libflutter_arm64.so not found!"
-            echo "Directory contents:"
-            ls -lah
-            echo ""
-            echo "Searching for .so files:"
-            find . -name "*.so" -type f 2>/dev/null || echo "No .so files found"
-            exit 1
-          fi
       
       - name: Copy artifacts
         run: |
           cd reFlutter
-          cp libflutter_arm64.so ${{ github.workspace }}/output/
+          if [ -f libflutter_arm64.so ]; then
+            cp libflutter_arm64.so ../output/
+            echo "✓ Copied libflutter_arm64.so"
+            ls -lh ../output/libflutter_arm64.so
+          else
+            echo "❌ Build failed - libflutter_arm64.so not found"
+            ls -lah
+            exit 1
+          fi
           
-          cat > ${{ github.workspace }}/output/build_info.txt << EOF
-reFlutter ARM64 Build Information
-==================================
-Snapshot Hash: ${{ inputs.snapshot_hash }}
-Engine Commit: ${{ inputs.engine_commit }}
-Build Date: $(date -u +"%Y-%m-%d %H:%M:%S UTC")
-Architecture: ARM64 (arm64-v8a)
-Build Number: ${{ github.run_number }}
-Workflow: ${{ github.workflow }}
-
-File Information:
-$(ls -lh libflutter_arm64.so)
-$(file libflutter_arm64.so)
-
-Usage:
-Replace lib/arm64-v8a/libflutter.so in your Flutter APK with this patched version.
-EOF
+          cat > ../output/build_info.txt << EOF
+          reFlutter ARM64 Build
+          =====================
+          Snapshot Hash: ${{ inputs.snapshot_hash }}
+          Engine Commit: ${{ inputs.engine_commit }}
+          Build Date: $(date -u)
+          Architecture: ARM64 (arm64-v8a)
           
-          echo ""
-          echo "=== Output directory ==="
-          ls -lah ${{ github.workspace }}/output/
-          cat ${{ github.workspace }}/output/build_info.txt
+          Usage:
+          1. Decompile your Flutter APK
+          2. Replace lib/arm64-v8a/libflutter.so with this file
+          3. Recompile and sign the APK
+          EOF
       
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
-        if: always()
         with:
-          name: reflutter-arm64-${{ inputs.snapshot_hash }}-run${{ github.run_number }}
+          name: reflutter-arm64-${{ inputs.snapshot_hash }}
           path: output/*
           retention-days: 30
-          if-no-files-found: error
-      
-      - name: Create Release
-        if: success() && github.ref == 'refs/heads/main'
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: build-${{ github.run_number }}-${{ inputs.snapshot_hash }}
-          name: reFlutter ARM64 - ${{ inputs.snapshot_hash }}
-          body: |
-            ## reFlutter Android ARM64 Build
-            
-            **Build Configuration:**
-            - 📱 Snapshot Hash: `${{ inputs.snapshot_hash }}`
-            - 🔧 Engine Commit: `${{ inputs.engine_commit }}`
-            - ⏱️ Wait Time: ${{ inputs.wait_time }}s
-            - 🏗️ Architecture: ARM64 (arm64-v8a) only
-            - 📅 Build Date: ${{ github.event.repository.updated_at }}
-            
-            **Artifacts:**
-            - `libflutter_arm64.so` - Patched ARM64 Flutter engine library
-            - `build_info.txt` - Build metadata and usage instructions
-            
-            **Installation:**
-            1. Decompile your Flutter APK (use APKTool or similar)
-            2. Navigate to `lib/arm64-v8a/`
-            3. Replace `libflutter.so` with the downloaded `libflutter_arm64.so`
-            4. Rename it to `libflutter.so`
-            5. Recompile and sign your APK
-            
-            **Note:** This is a custom patched build for reverse engineering purposes.
-          files: output/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Build summary
         if: always()
         run: |
-          echo "### 🔨 reFlutter ARM64 Build Summary" >> $GITHUB_STEP_SUMMARY
+          echo "### reFlutter ARM64 Build" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Configuration:**" >> $GITHUB_STEP_SUMMARY
           echo "- Snapshot Hash: \`${{ inputs.snapshot_hash }}\`" >> $GITHUB_STEP_SUMMARY
           echo "- Engine Commit: \`${{ inputs.engine_commit }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "- Wait Time: ${{ inputs.wait_time }}s" >> $GITHUB_STEP_SUMMARY
-          echo "- Architecture: ARM64 (arm64-v8a)" >> $GITHUB_STEP_SUMMARY
+          echo "- Architecture: ARM64 only" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
           if [ -f output/libflutter_arm64.so ]; then
             size=$(ls -lh output/libflutter_arm64.so | awk '{print $5}')
             echo "**✅ Build Successful**" >> $GITHUB_STEP_SUMMARY
-            echo "" >> $GITHUB_STEP_SUMMARY
-            echo "**Built Artifact:**" >> $GITHUB_STEP_SUMMARY
             echo "- \`libflutter_arm64.so\` ($size)" >> $GITHUB_STEP_SUMMARY
-            echo "" >> $GITHUB_STEP_SUMMARY
-            echo "Download the artifact from the 'Artifacts' section above." >> $GITHUB_STEP_SUMMARY
           else
             echo "**❌ Build Failed**" >> $GITHUB_STEP_SUMMARY
-            echo "" >> $GITHUB_STEP_SUMMARY
-            echo "No ARM64 library was generated. Check the build logs for errors." >> $GITHUB_STEP_SUMMARY
           fi
